# github

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: branch_and_share.md
docs/superpowers/plans/: 2026-07-17-dataset-evaluator.md
docs/superpowers/specs/: 2026-07-17-dataset-evaluator-design.md
examples/: benchmark_demo.py  branch_and_share_demo.py  eval_demo.py  pi_agent_stream.py  simple_demo.py
src/reasonflow/: AGENTS.md  __init__.py  asks.py  branch_generator.py  cache.py  cache_adapter.py  cgee.py  config.py  decoder.py  engine.py  eval.py  metrics.py  model_adapter.py  results.py  sampler.py  utils.py  verifier.py
src/reasonflow/branch_and_share/: AGENTS.md  __init__.py  adapter.py  branch_manager.py  config.py  control.py  detector.py  engine.py  launcher.py  logging.py  metrics.py  monitor.py  packet.py  protocol.py  results.py  store.py  (+1 more)
tests/: AGENTS.md  test_asks.py  test_branch_and_share.py  test_branch_and_share_adversarial.py  test_branch_and_share_branch_manager_adversarial.py  test_branch_and_share_engine_adversarial.py  test_branch_and_share_integration.py  test_branch_and_share_logging.py  test_branch_and_share_store_adversarial.py  test_branch_and_share_stream.py  test_branch_and_share_subprocess.py  test_branch_and_share_tail.py  test_branch_generator.py  test_cache.py  test_cache_adapter.py  test_cgee.py  test_config.py  test_decoder.py  test_engine.py  test_eval.py  test_metrics.py  test_model_adapter.py  test_results.py  test_sampler.py  test_utils.py  test_verifier.py
